Agrega titulo e instrucciones

--- a/main.html
+++ b/main.html
@@ -9,5 +9,11 @@
     <title>Calculador tiempo de videos</title>
 </head>
 <body>
+        <div class="alert alert-info text-center" role="alert">
+            <h4 class="alert-heading">Calculador tiempo de videos</h4>
+            <p class="mb-0">
+                Presione los botones "Agregar"/"Borrar último video", según corresponda, para ingresar los datos del video
+            </p>
+        </div>
 </body>
 </html>
