--- a/main.html
+++ b/main.html
@@ -15,5 +15,12 @@
                 Presione los botones "Agregar"/"Borrar último video", según corresponda, para ingresar los datos del video
             </p>
         </div>
+
+        <button type="button" name="agregar" class="btn btn-outline-primary mb-2">Agregar</button>
+        <button type="button" name="borrar" class="btn btn-outline-danger mb-2">Borrar último video</button>
+
+        <button type="button" name="calcular" class="btn btn-outline-primary mb-2 oculto">Calcular tiempo total</button>
+
+        <button type="reset" name="reiniciar" class="btn btn-outline-secondary oculto">Reiniciar</button>
 </body>
 </html>
