Agrega funcionalidad a los botones

--- a/main.html
+++ b/main.html
@@ -30,5 +30,6 @@
 
         <button type="reset" name="reiniciar" class="btn btn-outline-secondary oculto">Reiniciar</button>
     </form>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
