Agrega pequeños cambios

--- a/main.html
+++ b/main.html
@@ -17,8 +17,8 @@
             </p>
         </div>
 
-        <button type="button" name="agregar" class="btn btn-outline-primary mb-2">Agregar</button>
-        <button type="button" name="borrar" class="btn btn-outline-danger mb-2">Borrar último video</button>
+        <button type="button" name="agregar" class="btn btn-outline-primary mb-3">Agregar</button>
+        <button type="button" name="borrar" class="btn btn-outline-danger mb-3">Borrar último video</button>
 
         <div name="videos" class="mb-2"></div>
 
@@ -28,7 +28,7 @@
             <p>El tiempo total de los videos es ... <strong id="tiempo-total"></strong></p>
         </div>
 
-        <button type="reset" name="reiniciar" class="btn btn-outline-secondary oculto">Reiniciar</button>
+        <button type="reset" name="reiniciar" class="btn btn-outline-secondary mb-2 oculto">Reiniciar</button>
     </form>
     <script type="text/javascript" src="js/main.js"></script>
 </body>
