Arregla pequeños bugs

--- a/main.html
+++ b/main.html
@@ -20,11 +20,11 @@
         <button type="button" name="agregar" class="btn btn-outline-primary mb-3">Agregar</button>
         <button type="button" name="borrar" class="btn btn-outline-danger mb-3">Borrar último video</button>
 
-        <div name="videos" class="mb-2"></div>
+        <div id="videos" class="mb-3"></div>
 
         <button type="button" name="calcular" class="btn btn-outline-primary mb-2 oculto">Calcular tiempo total</button>
 
-        <div name="respuesta" class="oculto">
+        <div id="respuesta" class="oculto">
             <p>El tiempo total de los videos es ... <strong id="tiempo-total"></strong></p>
         </div>
 
