--- a/main.html
+++ b/main.html
@@ -30,6 +30,7 @@
 
         <button type="reset" name="reiniciar" class="btn btn-outline-secondary mb-2 oculto">Reiniciar</button>
     </form>
+    <script type="text/javascript" src="js/validaciones.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
