Agrega funciones para manejar errores

--- a/main.html
+++ b/main.html
@@ -22,6 +22,8 @@
 
         <div id="videos" class="mb-3"></div>
 
+        <ul id="errores" class="list-group list-group-flush mb-2 oculto">Errores</ul>
+
         <button type="button" name="calcular" class="btn btn-outline-primary mb-2 oculto">Calcular tiempo total</button>
 
         <div id="respuesta" class="oculto">
