--- a/main.html
+++ b/main.html
@@ -33,6 +33,7 @@
         <button type="reset" name="reiniciar" class="btn btn-outline-secondary mb-2 oculto">Reiniciar</button>
     </form>
     <script type="text/javascript" src="js/validaciones.js"></script>
+    <script type="text/javascript" src="js/pruebas.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
